# forecast

backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: db.py
backend/app/models/: forecast.py
backend/migrations/: env.py
backend/migrations/versions/: c134ab541022_.py
