[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ryunosuke121 <ryunosuke.ito.121@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.6.0"
anyio = "3.7.1"
click = "8.1.7"
fastapi = "0.104.1"
greenlet = "3.0.1"
h11 = "0.14.0"
idna = "3.6"
pydantic = "2.5.2"
pydantic-core = "2.14.5"
sniffio = "1.3.0"
sqlalchemy = "2.0.23"
starlette = "0.27.0"
typing-extensions = "4.8.0"
uvicorn = "0.24.0.post1"
alembic = "^1.13.0"
pymysql = "^1.1.0"
python-dotenv = "^1.0.0"
cryptography = "^41.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
